crates/veil-codegen/tests/snapshots/ts_snapshot_tests__ts_hello_world.snap
---
source: crates/veil-codegen/tests/ts_snapshot_tests.rs
expression: out
---
// ===== src/types.ts =====
// Generated by VEIL — do not edit

export interface User {
  id: string;
  name: string;
  email: string;
  greetingCount: number;
  active: boolean;
  created: Date;
}

export interface Email {
  addr: string;
}

export function EmailEquals(a: Email, b: Email): boolean {
  return (
    a.addr === b.addr
  );
}


// ===== src/interfaces.ts =====
// Generated by VEIL — do not edit

import type * as T from './types';

export interface UserRepo {
  save(user: T.User): Promise<void>;
  find(id: string): Promise<T.User | null>;
  findByEmail(email: string): Promise<T.User | null>;
  listActive(): Promise<T.User[]>;
  delete(id: string): Promise<void>;
}

export interface Notifier {
  sendEmail(to: string, subject: string, body: string): Promise<void>;
}

export interface Bus {
  dispatch(evt: Record<string, unknown>): Promise<void>;
}


// ===== src/services.ts =====
// Generated by VEIL — do not edit

import type * as T from './types';
import type * as I from './interfaces';

export async function CreateUser(name: string, email: string, userRepo: UserRepo, bus: Bus): Promise<void> {
  // Step: validate
  if (!(email !== "")) {
  throw new Error("email required");
};
  // Step: persist
  const user = { id: name, name: email };
  await deps.userRepo.save(user);
  bus.dispatch({ id: user.id, email, now: now() });
}

export async function GreetUser(userId: string, timeOfDay: string, notifier: Notifier): Promise<void> {
  // Step: load
  const user = await deps.userRepo.find(userId);
  // Step: greet
  user.greet(timeOfDay);
  await deps.notifier.sendEmail(user.email, "Greeting sent!", timeOfDay);
}


// ===== package.json =====
{
  "name": "hello-world",
  "version": "0.1.0",
  "type": "module",
  "main": "dist/index.js",
  "types": "dist/index.d.ts",
  "scripts": {
    "build": "tsc",
    "dev": "tsc --watch"
  },
  "devDependencies": {
    "typescript": "^5.4.0"
  }
}

// ===== tsconfig.json =====
{
  "compilerOptions": {
    "target": "ES2022",
    "module": "ESNext",
    "moduleResolution": "bundler",
    "strict": true,
    "esModuleInterop": true,
    "outDir": "dist",
    "rootDir": "src",
    "declaration": true,
    "skipLibCheck": true
  },
  "include": ["src/**/*.ts"]
}

// ===== src/index.ts =====
// Generated by VEIL — do not edit
// Package: HelloWorld

export * from './types';
export * from './interfaces';
export * from './services';
