crates/veil-codegen/tests/snapshots/ts_snapshot_tests__ts_interfaces_file.snap
---
source: crates/veil-codegen/tests/ts_snapshot_tests.rs
assertion_line: 178
expression: content
---
// Generated by VEIL — do not edit

import type * as T from './types';

export interface ItemRepo {
  find(id: string): Promise<T.Item | null>;
  listAll(): Promise<T.Item[]>;
  save(item: T.Item): Promise<void>;
}
