crates/veil-codegen/tests/snapshots/ts_snapshot_tests__ts_ladder_l0.snap
---
source: crates/veil-codegen/tests/ts_snapshot_tests.rs
assertion_line: 153
expression: out
---
// ===== src/types.ts =====
// Generated by VEIL — do not edit

export interface Greeting {
  id: string;
  message: string;
}


// ===== src/interfaces.ts =====
// Generated by VEIL — do not edit

import type * as T from './types';

export interface GreetingRepo {
  listAll(): Promise<T.Greeting[]>;
  save(greeting: T.Greeting): Promise<void>;
}


// ===== src/services.ts =====
// Generated by VEIL — do not edit

import type * as T from './types';
import type * as I from './interfaces';

export function ListGreetings(greetingRepo: GreetingRepo): void {
  // Step: query
  const items = greetingRepo.listAll();
  return items;
}

export function CreateGreeting(message: string, greetingRepo: GreetingRepo): void {
  // Step: persist
  const g = { id: message };
  greetingRepo.save(g);
  return g;
}


// ===== src/index.ts =====
// Generated by VEIL — do not edit
// Package: LadderL0

export * from './types';
export * from './interfaces';
export * from './services';

// ===== package.json =====
{
  "name": "ladder-l0",
  "version": "0.1.0",
  "type": "module",
  "main": "dist/index.js",
  "types": "dist/index.d.ts",
  "scripts": {
    "build": "tsc",
    "dev": "tsc --watch"
  },
  "devDependencies": {
    "typescript": "^5.4.0"
  }
}

// ===== tsconfig.json =====
{
  "compilerOptions": {
    "target": "ES2022",
    "module": "ESNext",
    "moduleResolution": "bundler",
    "strict": true,
    "esModuleInterop": true,
    "outDir": "dist",
    "rootDir": "src",
    "declaration": true,
    "skipLibCheck": true
  },
  "include": ["src/**/*.ts"]
}
