crates/veil-codegen/tests/snapshots/ts_snapshot_tests__ts_ladder_l1.snap
---
source: crates/veil-codegen/tests/ts_snapshot_tests.rs
assertion_line: 160
expression: out
---
// ===== src/types.ts =====
// Generated by VEIL — do not edit

export interface Item {
  id: string;
  name: string;
}


// ===== src/interfaces.ts =====
// Generated by VEIL — do not edit

import type * as T from './types';

export interface ItemRepo {
  find(id: string): Promise<T.Item | null>;
  listAll(): Promise<T.Item[]>;
  save(item: T.Item): Promise<void>;
}


// ===== src/services.ts =====
// Generated by VEIL — do not edit

import type * as T from './types';
import type * as I from './interfaces';

export function ListItems(itemRepo: ItemRepo): void {
  // Step: query
  const items = itemRepo.listAll();
  return items;
}

export function GetItem(id: string, itemRepo: ItemRepo): void {
  // Step: load
  const item = itemRepo.find(id);
  return item;
}

export function CreateItem(name: string, itemRepo: ItemRepo): void {
  // Step: validate
  if (!(name !== "")) {
  throw new Error("name required");
};
  // Step: persist
  const item = { id: name };
  itemRepo.save(item);
  return item;
}


// ===== src/index.ts =====
// Generated by VEIL — do not edit
// Package: LadderL1

export * from './types';
export * from './interfaces';
export * from './services';

// ===== package.json =====
{
  "name": "ladder-l1",
  "version": "0.1.0",
  "type": "module",
  "main": "dist/index.js",
  "types": "dist/index.d.ts",
  "scripts": {
    "build": "tsc",
    "dev": "tsc --watch"
  },
  "devDependencies": {
    "typescript": "^5.4.0"
  }
}

// ===== tsconfig.json =====
{
  "compilerOptions": {
    "target": "ES2022",
    "module": "ESNext",
    "moduleResolution": "bundler",
    "strict": true,
    "esModuleInterop": true,
    "outDir": "dist",
    "rootDir": "src",
    "declaration": true,
    "skipLibCheck": true
  },
  "include": ["src/**/*.ts"]
}
