crates/veil-codegen/tests/snapshots/ts_snapshot_tests__ts_services_file.snap
---
source: crates/veil-codegen/tests/ts_snapshot_tests.rs
assertion_line: 186
expression: content
---
// Generated by VEIL — do not edit

import type * as T from './types';
import type * as I from './interfaces';

export function ListItems(itemRepo: ItemRepo): void {
  // Step: query
  const items = itemRepo.listAll();
  return items;
}

export function GetItem(id: string, itemRepo: ItemRepo): void {
  // Step: load
  const item = itemRepo.find(id);
  return item;
}

export function CreateItem(name: string, itemRepo: ItemRepo): void {
  // Step: validate
  if (!(name !== "")) {
  throw new Error("name required");
};
  // Step: persist
  const item = { id: name };
  itemRepo.save(item);
  return item;
}
