crates/veil-codegen/tests/snapshots/ts_snapshot_tests__ts_svelte_components.snap
---
source: crates/veil-codegen/tests/ts_snapshot_tests.rs
assertion_line: 201
expression: out
---
// ===== src/lib/components/Avatar.svelte =====
<script lang="ts">
  // Generated by VEIL

  interface Props {
    name: string;
  }
  let { name }: Props = $props();
</script>

<!-- veil: empty template shell for Avatar — add `template` raw block when needed -->
<div class="veil-shell"></div>

<style>
  /* TODO: Add component styles */

</style>

// ===== src/lib/components/NavBar.svelte =====
<script lang="ts">
  // Generated by VEIL

  interface Props {
    title: string;
  }
  let { title }: Props = $props();
</script>

<!-- veil: empty template shell for NavBar — add `template` raw block when needed -->
<div class="veil-shell"></div>

<style>
  /* TODO: Add component styles */

</style>
