crates/veil-codegen/tests/snapshots/ts_snapshot_tests__ts_types_file.snap
---
source: crates/veil-codegen/tests/ts_snapshot_tests.rs
assertion_line: 170
expression: content
---
// Generated by VEIL — do not edit

export interface Item {
  id: string;
  name: string;
}
